--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./styles/style.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
-        <title>HYF - Starter Template</title>
+        <title>Pockemon Search</title>
     </head>
     <body>
-        <main>
-        </main>
+        <section>
+            <div class="main-container">
+                <input type="number" id="input">
+                <button type="button" id="btn">Search</button>
+                <div id="root"></div>
+            </div>
+        </section>
         <script type="module" src="./src/init.js"></script>
     </body>
 </html>
